[package]
name = "ansi2png-rs"
version = "0.1.1"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

description = "Convert ansi output to pngs"
documentation = "https://docs.rs/ansi2png-rs/"
homepage = "https://github.com/AlexanderThaller/ansi2png-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/ansi2png-rs"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
imageproc = "0.22"
rusttype = "0.9"
structopt = "0.3"
vte = "0.10"
