[package]
name = "ansi2png-rs"
version = "0.2.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

description = "Convert ansi output to pngs"
documentation = "https://docs.rs/ansi2png-rs/"
homepage = "https://github.com/AlexanderThaller/ansi2png-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/ansi2png-rs"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
vte = "0.10"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"
